--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "NestJS CQRS Microservices Starter",
   "author": "Hardys",
   "license": "MIT",
+  "type": "commonjs",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
@@ -58,13 +59,16 @@
     "husky": "6.0.0",
     "jest": "26.6.3",
     "lint-staged": "10.5.4",
+    "nps": "^5.10.0",
+    "nps-utils": "^1.7.0",
     "prettier": "2.2.1",
     "supertest": "6.1.3",
     "ts-jest": "26.5.5",
     "ts-loader": "9.1.1",
     "ts-node": "9.1.1",
     "tsconfig-paths": "3.9.0",
-    "typescript": "4.2.4"
+    "typescript": "4.2.4",
+    "wait-on": "^5.3.0"
   },
   "jest": {
     "moduleFileExtensions": [
