--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "apollo-server-express": "2.24.0",
     "graphql": "15.5.0",
     "graphql-tools": "7.0.4",
+    "lodash": "^4.17.21",
     "mysql": "2.18.1",
     "node-eventstore-client": "0.2.18",
     "node-nats-streaming": "0.3.2",
